src/main/default/objects/Credit_Memo__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>