src/main/default/objects/Credit_Memo__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memo (Office)</relationshipLabel>
    <relationshipName>Credit_Memo1</relationshipName>
    <type>Lookup</type>
</CustomField>