src/main/default/objects/Credit_Memo__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>