src/main/default/objects/Credit_Memo__c/fields/Remaining_Credit__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credit__c</fullName>
    <formula>Total_Amount__c - Total_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>