src/main/default/objects/Credit_Memo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Status__c.SObject__c</field>
            <operation>equals</operation>
            <value>Credit_Memo__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>