src/main/default/objects/Credit_Memo__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Credit_Memo_Item__c.Extended_Amount__c</summarizedField>
    <summaryForeignKey>Credit_Memo_Item__c.Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>