src/main/default/objects/Credit_Memo__c/fields/Total_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied__c</fullName>
    <label>Total Applied</label>
    <summarizedField>Credit_Memo_Applied__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Memo_Applied__c.Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>